--- a/index.html
+++ b/index.html
@@ -1,44 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+
+  <!--Style Section -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reseter.css" />
+  <link rel="stylesheet" href="/assets/css/style.css">
   <title>Frontend Mentor | Tip calculator app</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
+
 </head>
+
 <body>
 
-  Bill
+  <h1>SPLITTER</h1>
 
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
+  <main class="card-principal">
 
-  Number of People
+    <div class="card-esquerda">
+      <h3>Bill</h3>
+      <input type="text">
+      <p>Select Tip %</p>
 
-  Tip Amount
-  / person
 
-  Total
-  / person
+      <div class="secao-botoes">
+        <button>5%</button>
+        <button>10%</button>
+        <button>15%</button>
+        <button>50%</button>
+        <button>Custom</button>
+      </div>
 
-  Reset
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      <p>Number of People</p>
+      <img src="/assets/images/icon-person.svg" alt=""> <input type="text">
+
+    </div>
+
+    <div class="card-direita">
+      <h5>Tip Amount</h5>
+      <p>/person</p>
+
+      <h5>Total</h5>
+      <p>/ person</p>
+
+      <button>Reset</button>
+    </div>
+  </main>
+
+
 </body>
+
 </html>
